--- a/index.html
+++ b/index.html
@@ -792,6 +792,10 @@
     span.onclick = function() {
       modal.style.display = "none";
     }
+
+    modal.onclick =function(){
+      modal.style.display = "none";
+    }
 </script>
   </body>
 </html>
