Content and photos added for customer testimony

--- a/index.html
+++ b/index.html
@@ -533,43 +533,46 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="testimony-wrap text-center pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/tinified/ey_insta_1.jpg)">
+                  <p class="name">Robin G.</p>
+                  <span class="position">Gender Reveal</span>
+                  <div class="user-img mb-4" style="background-image: url(images/ey_testimony_1.jpeg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
                   </div>
                   <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Jason McClean</p>
-                    <span class="position">Customer</span>
+                    <p class="mb-4"> I have to brag about Eventfullyyours! I was tasked with a last minute gender reveal party to plan and Shradha made it so easy for me. Told her what I wanted and what time the party was and guys she had the balloons at the house 1 hour prior and they were giants! IT WAS PERFECT!   </p>
+
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="testimony-wrap text-center pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/tinified/ey_insta_1.jpg)">
+                  <p class="name">Adriana Guerrero</p>
+                  <span class="position">Balloon Bouquet</span>
+                  <div class="user-img mb-4" style="background-image: url(images/ey_testimony_2.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
                   </div>
                   <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Mark Stevenson</p>
-                    <span class="position">Customer</span>
+                    <p class="mb-4">Their special attention to detail made this balloon bouquet all that special for my birthday girl! Definitely will be using them for other occasions.</p>
+
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="testimony-wrap text-center pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/tinified/ey_insta_1.jpg)">
+                  <p class="name">Amanda Mary</p>
+                  <span class="position">Birthday Balloon Arch</span>
+                  <div class="user-img mb-4" style="background-image: url(images/ey_testimony_3.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
                   </div>
                   <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Art Leonard</p>
-                    <span class="position">Customer</span>
+                    <p class="mb-4">Our family had the best quarantine birthday celebration for our 18 year old son!!! The balloons were gorgeous and made for a festive occasion and wonderful family photos! I highly recommend Eventfullyyours for any occasion!!</p>
+
                   </div>
                 </div>
               </div>
